troubleshooting spacing issues with mobile styling

--- a/styles/style.sass
+++ b/styles/style.sass
@@ -155,7 +155,7 @@ body
                                 span
                                     color: #24e7fc
 
-    .about-container
+    .main-container
         width: 80rem
         margin: 0 auto
         display: flex
@@ -163,12 +163,28 @@ body
         justify-content: center
         align-items: center
         margin-top: 3rem
+
+        @media only screen and (max-width: 500px)
+            max-width: 500px
+
+        .about-container
+            @media only screen and (max-width: 500px)
+                max-width: 395px
+                margin: 0em 11em 0em 4em
+                border: 3px solid white
+
+        @media only screen and (max-width: 500px)
+            max-width: 500px
+            border: 3px solid green
         
         h4
             font-family: "Space Mono", monospace
             margin: 0px
             width: 50rem
             color: #24e7fc
+
+            @media only screen and (max-width: 500px)
+                font-size: 1.2rem;
         
         h1
             font-family: "Work Sans", sans-serif
@@ -177,11 +193,19 @@ body
             width: 50rem
             opacity: 0.7
 
+            @media only screen and (max-width: 500px)
+                width: 25rem
+                font-size: 3em
+
         h3
             font-family: "Space Mono", monospace
             font-size: 3rem
             margin: 0px
             opacity: 0.5
+
+            @media only screen and (max-width: 500px)
+                font-size: 1.5rem
+                width: 17em
 
         p
             font-size: 1.2em
@@ -190,6 +214,10 @@ body
             margin-top: 2rem
             width: 50rem
             opacity: 0.5
+
+            @media only screen and (max-width: 500px)
+                font-size: 1.2em
+                width: 24rem
         
     .skills-container
         margin-top: 1rem
